# artifacts-deploy

./: .gitignore  CMakeLists.txt  README.md  api_handler.cpp  api_handler.hpp  api_reply.cpp  api_reply.hpp  cooler_dialog.cpp  cooler_dialog.hpp  cooler_list.cpp  cooler_list.hpp  data_manager.cpp  data_manager.hpp  deploy_dialog.cpp  deploy_dialog.hpp  deploy_dialog.ui  deploy_object.cpp  deploy_object.hpp  download_manager.cpp  download_manager.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  ssh_connection.cpp  ssh_connection.hpp  ssh_dialog.cpp  ssh_dialog.hpp  ssh_dialog.ui  todo.txt  token_dialog.cpp  token_dialog.hpp  token_dialog.ui
.github/workflows/: cmake-multi-platform.yml
src/: api_handler.cpp  api_handler.hpp  api_reply.cpp  api_reply.hpp  complex_dialog.cpp  complex_dialog.hpp  complex_list.cpp  complex_list.hpp  complex_list_element.cpp  complex_list_element.hpp  cooler_combobox.cpp  cooler_combobox.hpp  data_manager.cpp  data_manager.hpp  deploy_dialog.cpp  deploy_dialog.hpp  deploy_list.cpp  deploy_list.hpp  deploy_list_element.cpp  deploy_list_element.hpp  deploy_list_group.cpp  deploy_list_group.hpp  logger.cpp  logger.hpp  mainwindow.cpp  mainwindow.hpp  mylogger.cpp  mylogger.hpp  ssh_connection.cpp  ssh_connection.hpp  ssh_dialog.cpp  ssh_dialog.hpp  token_dialog.cpp  token_dialog.hpp
src/resources/: complex_list_elements.qrc
src/ui/: deploy_dialog.ui  deploy_list_element.ui  deploy_list_element_spaced.ui  deploy_list_group.ui  mainwindow.ui  ssh_dialog.ui  token_dialog.ui  token_list_element.ui
win-libs/lib/: zip.lib
